--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="author" content="John Doe"> 
+    <meta name="author" content="Ihab Mouhajer"> 
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -12,7 +12,9 @@
     <div id="jeu">
         <h1 class="titre">Batman: le retour du Sphinx</h1>
         <h2 class="titre2">Lorem ipsum dolor sit amet</h2>
+        <div class="media">
         <img src="./assets/images/logo.png">
+        </div>
         <p class="fictif">Consectetur adipiscing elit. Donec vulputate, odio a sagittis venenatis, nulla sem hendrerit risus, id laoreet ligula orci id ante. Phasellus facilisis tincidunt justo, at ultrices arcu consequat nec. Praesent nec felis vitae arcu porta posuere. Mauris pellentesque id lorem non commodo.
         </p>
         <div class="boutons">
