--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+    <button class="reini">Reinitialiser</button>
     <div id="jeu">
         <h1 class="titre">Batman: le retour du Sphinx</h1>
         <h2 class="titre2">Lorem ipsum dolor sit amet</h2>
