--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container">
     <button class="reini">Reinitialiser</button>
+    <label class="mute-text">mute:</label>
+    <input class="mute" type="checkbox">
     <div id="jeu">
         <h1 class="titre">Batman: le retour du Sphinx</h1>
         <h2 class="titre2">Lorem ipsum dolor sit amet</h2>
